--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: firestore_helper_methods
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
-# homepage: https://www.example.com
+repository: https://github.com/godfreycomputing/firestore_helper_methods
 
 environment:
   sdk: '>=2.15.1 <3.0.0'
